src/snapshots/injet__meta__tests__v1.snap
---
source: src/meta.rs
expression: "Meta::read(&mut iter)"
---
Ok(
    Meta {
        version: 1,
        fields: [
            Size(
                1231234,
            ),
            Filename(
                "hello.zip",
            ),
        ],
    },
)
