src/snapshots/injet__meta__tests__v2_unknown_tlv.snap
---
source: src/meta.rs
expression: "Meta::read(&mut iter)"
---
Ok(
    Meta {
        version: 2,
        fields: [
            Size(
                1234,
            ),
            Filename(
                "x.zip",
            ),
        ],
    },
)
