src/snapshots/injet__meta__tests__v3_unknown_tlv_after_signature.snap
---
source: src/meta.rs
expression: "Meta::read(&mut iter)"
---
Ok(
    Meta {
        version: 3,
        fields: [
            Size(
                7,
            ),
            Filename(
                "a.bin",
            ),
            Hash(
                0,
            ),
            MetaHash(
                2050775407,
            ),
            Signature(
                [
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                    205,
                ],
            ),
        ],
        auth_prefix: Some(
            [
                107,
                105,
                1,
                4,
                7,
                0,
                0,
                0,
                2,
                5,
                97,
                46,
                98,
                105,
                110,
                3,
                4,
                0,
                0,
                0,
                0,
                4,
                4,
                111,
                89,
                60,
                122,
            ],
        ),
    },
)
