src/snapshots/injet__meta__tests__v3_with_mac_roundtrip.snap
---
source: src/meta.rs
expression: "Meta::read(&mut iter)"
---
Ok(
    Meta {
        version: 3,
        fields: [
            Size(
                7,
            ),
            Filename(
                "a.bin",
            ),
            Hash(
                0,
            ),
            MetaHash(
                2050775407,
            ),
            Mac {
                salt: [
                    85,
                    85,
                    85,
                    85,
                    85,
                    85,
                    85,
                    85,
                    85,
                    85,
                    85,
                    85,
                    85,
                    85,
                    85,
                    85,
                ],
                mac: [
                    119,
                    119,
                    119,
                    119,
                    119,
                    119,
                    119,
                    119,
                    119,
                    119,
                    119,
                    119,
                    119,
                    119,
                    119,
                    119,
                    119,
                    119,
                    119,
                    119,
                    119,
                    119,
                    119,
                    119,
                    119,
                    119,
                    119,
                    119,
                    119,
                    119,
                    119,
                    119,
                ],
            },
        ],
    },
)
