src/snapshots/injet__meta__tests__v3_with_sig_roundtrip.snap
---
source: src/meta.rs
expression: "Meta::read(&mut iter)"
---
Ok(
    Meta {
        version: 3,
        fields: [
            Size(
                7,
            ),
            Filename(
                "a.bin",
            ),
            Hash(
                0,
            ),
            MetaHash(
                2050775407,
            ),
            Signature(
                [
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                    171,
                ],
            ),
        ],
    },
)
